crates/scene/tests/ui/view_decl_wrong_field_type.stderr
error[E0308]: mismatched types
  --> tests/ui/view_decl_wrong_field_type.rs:11:15
   |
11 |         name: 42,
   |               ^^ expected `String`, found integer
   |
help: try using a conversion method
   |
11 |         name: 42.to_string(),
   |                 ++++++++++++
